objects/ASI_CRM_Depletion__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <formula>ASI_CRM_Item_Group__r.ASI_MFM_Sub_brand__r.ASI_MFM_Brand__r.ASI_CRM_CN_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_Channel__r.ASI_CRM_CN_Channel_Chi_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Depletions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Month__c</fullName>
        <formula>MONTH(  ASI_CRM_Shipment_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depletion Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Volume__c</fullName>
        <label>Depletion Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Year_String__c</fullName>
        <formula>TEXT(ASI_CRM_Depletion_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depletion Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Year__c</fullName>
        <formula>YEAR( ASI_CRM_Shipment_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depletion Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Groups__c</fullName>
        <formula>ASI_CRM_Item_Group__r.ASI_CRM_CN_Chinese_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Depletions</relationshipLabel>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price (SKU)</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipName>Depletions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Shipment_Date__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Tier__c</fullName>
        <label>WS Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Depletion</label>
    <listViews>
        <fullName>ASI_CRM_MY_MY_AllDepletion</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_MY_SKU__c</columns>
        <columns>ASI_CRM_Depletion_Year_String__c</columns>
        <columns>ASI_CRM_Depletion_Month__c</columns>
        <columns>ASI_CRM_Depletion_Volume__c</columns>
        <columns>ASI_CRM_Shipment_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Depletion__c.ASI_CRM_MY_Depletion</value>
        </filters>
        <label>ASI CRM MY - All Depletion</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_MY_AllDepletion2014</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_MY_SKU__c</columns>
        <columns>ASI_CRM_Depletion_Year_String__c</columns>
        <columns>ASI_CRM_Depletion_Month__c</columns>
        <columns>ASI_CRM_Depletion_Volume__c</columns>
        <columns>ASI_CRM_Shipment_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Depletion__c.ASI_CRM_MY_Depletion</value>
        </filters>
        <filters>
            <field>ASI_CRM_Depletion_Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>ASI CRM MY - All Depletion 2014</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_MY_AllDepletionDebug</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_MY_SKU__c</columns>
        <columns>ASI_CRM_Depletion_Year_String__c</columns>
        <columns>ASI_CRM_Depletion_Month__c</columns>
        <columns>ASI_CRM_Depletion_Volume__c</columns>
        <columns>ASI_CRM_Shipment_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Depletion__c.ASI_CRM_MY_Depletion</value>
        </filters>
        <filters>
            <field>ASI_CRM_Wholesaler__c</field>
            <operation>contains</operation>
            <value>503437</value>
        </filters>
        <filters>
            <field>ASI_CRM_Customer__c</field>
            <operation>contains</operation>
            <value>505617,100004,505721</value>
        </filters>
        <filters>
            <field>ASI_CRM_Depletion_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_CRM_MY_SKU__c</field>
            <operation>startsWith</operation>
            <value>WY323V</value>
        </filters>
        <label>ASI CRM MY - All Depletion Debug</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_MY_NN82OAG</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_MY_SKU__c</columns>
        <columns>ASI_CRM_Depletion_Year_String__c</columns>
        <columns>ASI_CRM_Depletion_Month__c</columns>
        <columns>ASI_CRM_Depletion_Volume__c</columns>
        <columns>ASI_CRM_Shipment_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>startsWith</operation>
            <value>aGUD0000000NN82</value>
        </filters>
        <label>ASI CRM MY - NN82OAG</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_MY_SKU__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Depletion_Month__c</columns>
        <columns>ASI_CRM_Depletion_Year__c</columns>
        <columns>ASI_CRM_Depletion_Volume__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Depletion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depletions</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Depletion</fullName>
        <active>true</active>
        <label>Depletion (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Depletion</fullName>
        <active>true</active>
        <label>Depletion (MY)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>